Fixed footers font issue and aligned it

--- a/css/contact.css
+++ b/css/contact.css
@@ -154,7 +154,7 @@ width: 600px;
 height: 355px;
 background-color:#fffff;
 margin-top: 11%;
-margin-left: 41.3%
+margin-left: 41.3%;
 }
 .profile{
     width: 141px;
